UTM parameters + ES6

--- a/view/adminhtml/templates/support/overview.phtml
+++ b/view/adminhtml/templates/support/overview.phtml
@@ -74,7 +74,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             </div>
         </div>
         <div class="links">
-            <a href="https://community.algolia.com/magento/doc/m1/indexing/" target="_blank">
+            <a href="https://community.algolia.com/magento/doc/m1/indexing/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Indexing
                 </span>
@@ -82,7 +82,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
                     In order to provide fast and relevant search, Algolia restructures your data in a special way, via Indexing.
                 </span>
             </a>
-            <a href="https://community.algolia.com/magento/doc/m1/indexing-queue/" target="_blank">
+            <a href="https://community.algolia.com/magento/doc/m1/indexing-queue/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Indexing Queue
                 </span>
@@ -90,7 +90,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
                     The index queue manages all uploads to Algolia. Before your data can be searched, it must be uploaded to Algolia. This process is called indexing, which the extension does automatically - via the queue.
                 </span>
             </a>
-            <a href="https://community.algolia.com/magento/doc/m1/customize-autocomplete/" target="_blank">
+            <a href="https://community.algolia.com/magento/doc/m1/customize-autocomplete/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Autocomplete menu
                 </span>
@@ -98,7 +98,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
                     Customize the autocomplete drop-down menu which appears underneath the search bar on your Magento site.
                 </span>
             </a>
-            <a href="https://community.algolia.com/magento/doc/m1/customize-backend/" target="_blank">
+            <a href="https://community.algolia.com/magento/doc/m1/customize-backend/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Customize the extension
                 </span>
@@ -106,7 +106,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
                     In this guide you’ll learn how to attach hooks to the events fired by the Algolia extension. It should only take a few minutes. Let’s get started!
                 </span>
             </a>
-            <a href="https://community.algolia.com/magento/doc/faq-support-data/" target="_blank">
+            <a href="https://community.algolia.com/magento/doc/faq-support-data/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Troubleshooting
                 </span>
@@ -116,7 +116,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             </a>
         </div>
 
-        <a href="https://community.algolia.com/magento/doc/m2/getting-started/" class="footer" target="_blank">
+        <a href="https://community.algolia.com/magento/doc/m2/getting-started/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" class="footer" target="_blank">
             See all documentation ...
         </a>
     </div>
@@ -134,7 +134,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             </div>
         </div>
         <div class="links">
-            <a href="https://discourse.algolia.com/t/magento-2-autocomplete-results-configurable-product-prices-showing-0-00/5477" target="_blank">
+            <a href="https://discourse.algolia.com/t/magento-2-autocomplete-results-configurable-product-prices-showing-0-00/5477/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Autocomplete results configurable product prices showing £0.00
                 </span>
@@ -142,7 +142,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
                     We are using the official Algolia extension 1.7.0 on Magento 2.2.4 CE. For some reason our Magento 2 store’s autocomplete search results (the dropdown box below the search input field) is now showing zero prices for some Configurable products (where until the day before yesterday) it would show a range from lowest to highest.
                 </span>
             </a>
-            <a href="https://discourse.algolia.com/t/magento2-custom-searchable-attributes/1833" target="_blank">
+            <a href="https://discourse.algolia.com/t/magento2-custom-searchable-attributes/1833/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Custom Searchable attributes
                 </span>
@@ -150,7 +150,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
                     As per instructions found at Algolia we've tried to set a list of Indexable attributes to sent from Magento 2.1.7 to Algolia.
                 </span>
             </a>
-            <a href="https://discourse.algolia.com/t/m2-1-7-js-error-on-clean-install/2034" target="_blank">
+            <a href="https://discourse.algolia.com/t/m2-1-7-js-error-on-clean-install/2034/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     M2.1.7 JS Error on Clean install
                 </span>
@@ -158,7 +158,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
                     Just installed Algolia for Magento 2 via composer, run setup:upgrade and deployed files and cleared caches (site is still in developer mode).
                 </span>
             </a>
-            <a href="https://discourse.algolia.com/t/layered-navigation-on-search-result-pages/4619" target="_blank">
+            <a href="https://discourse.algolia.com/t/layered-navigation-on-search-result-pages/4619/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Layered Navigation on search result pages
                 </span>
@@ -166,7 +166,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
                     I have an issue with layered navigation (Filters) on Search result pages within Magento where Instant search is not being used.
                 </span>
             </a>
-            <a href="https://discourse.algolia.com/t/magento-in-the-url/2364" target="_blank">
+            <a href="https://discourse.algolia.com/t/magento-in-the-url/2364/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" target="_blank">
                 <span class="heading">
                     Magento in the URL
                 </span>
@@ -176,7 +176,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             </a>
         </div>
 
-        <a href="" class="footer" target="_blank">
+        <a href="https://discourse.algolia.com/tags/magento2/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" class="footer" target="_blank">
             See the forum ...
         </a>
     </div>
