--- a/view/adminhtml/templates/support/contact.phtml
+++ b/view/adminhtml/templates/support/contact.phtml
@@ -75,13 +75,13 @@
                     <div class="admin__field-note">
                         <div class="note_icon">i</div>
                         <span>
-                            To better identify your problem, we automatically attach:
+                            To provide a better support, this information will be attached to your request:
                             <ul>
-                                <li>Magento and Algolia extension version</li>
-                                <li>Information about indexing queue [TOOLTIP]</li>
+                                <li>Magento and Algolia extension version numbers</li>
                                 <li>Algolia extension configuration</li>
+                                <li>Indexing queue information [TOOLTIP]</li>
                             </ul>
-                            <b>No personal information is transmitted.</b>
+                            <b>No personal information will be sent to Algolia.</b>
                         </span>
                     </div>
                     <br>
@@ -95,7 +95,7 @@
                             checked />
                         <label class="admin__actions-switch-label" for="send_additional_info">
                             <span class="admin__actions-switch-text">
-                                Send list of an installed 3rd party modules and a catalog size [TOOLTIP]
+                                Attach list of installed 3rd party modules and catalog size [TOOLTIP this additional data can speed up the support process by providing our team more context on your implementation]
                             </span>
                         </label>
                     </div>
