--- a/view/adminhtml/templates/support/overview.phtml
+++ b/view/adminhtml/templates/support/overview.phtml
@@ -34,7 +34,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             </div>
 
             <div class="sub">
-                Documentation for all things Algolia for Magento
+                The official Algolia for Magento documentation
             </div>
         </div>
 
@@ -53,7 +53,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             </div>
 
             <div class="sub">
-                Get answers by the Algolia Community
+                Questions and answers from the Algolia community
             </div>
         </div>
 
@@ -122,7 +122,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
         </div>
 
         <a href="https://community.algolia.com/magento/doc/m2/getting-started/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" class="footer" target="_blank">
-            See all documentation ...
+            Go to documentation homepage ...
         </a>
     </div>
 
@@ -182,7 +182,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
         </div>
 
         <a href="https://discourse.algolia.com/tags/magento2/?utm_source=magento&utm_medium=extension&utm_campaign=support-page" class="footer" target="_blank">
-            See the forum ...
+            Browse more forum topics ...
         </a>
     </div>
 
@@ -195,7 +195,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
             </div>
 
             <div class="sub">
-                We prepared a few video tutorials to get you started
+                An introduction to the Magento extension in video
             </div>
         </div>
         <div class="videos">
@@ -226,7 +226,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
         </div>
 
         <a href="https://www.youtube.com/playlist?list=PLuHdbqhRgWHLZ8pIwBT0B2JNxdoSfCWKY&disable_polymer=true" class="footer" target="_blank">
-            See more tutorials ...
+            View more tutorials ...
         </a>
     </div>
 </div>
@@ -234,7 +234,7 @@ $videoFeatures = $this->getViewFileUrl('Algolia_AlgoliaSearch::images/video-feat
 <div class="contact-us">
     <?php if ($this->isExtensionSupportEnabled()): ?>
         Didn't find what you were looking for?
-        <a href="<?php echo $this->getUrl('*/*/contact'); ?>">Contact Us</a>.
+        <a href="<?php echo $this->getUrl('*/*/contact'); ?>">Contact us</a>.
     <?php else: ?>
         Consider <a href="https://www.algolia.com/pricing" target="_blank">upgrading your plan</a>
         to get direct and fast email help by Algolia experts.
