--- a/view/adminhtml/templates/support/components/legacy-version.phtml
+++ b/view/adminhtml/templates/support/components/legacy-version.phtml
@@ -6,8 +6,7 @@
 
 <div class="legacy_version">
     You’re running version <span id="current_version" class="version"></span>.
-    The latest available version is <span id="latest_version" class="version"></span>.
-    Please, update the extension and see if the issues persists.
-
+    The latest version is <span class="version latest_version"></span>.
+    Please update to <span class="version latest_version"></span> for new features and bug fixes that could solve your current issues.
     <a href="https://community.algolia.com/magento/doc/m2/upgrade/" target="_blank">How to update?</a>
 </div>
