--- a/view/adminhtml/templates/analytics/ui/graph.phtml
+++ b/view/adminhtml/templates/analytics/ui/graph.phtml
@@ -1,4 +1,3 @@
-<?php /** @var $this  */ ?>
 <?php if (count($this->getAnalytics())): ?>
 <div id="algolia-analyatics-diagram"></div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -57,6 +56,6 @@
 </script>
 <?php else: ?>
     <div class="dashboard-diagram-nodata">
-        <span><?= /* @escapeNotVerified */ __('No Data Found') ?></span>
+        <span><?php echo __('No Data Found') ?></span>
     </div>
 <?php endif ?>
