--- a/view/adminhtml/layout/algolia_algoliasearch_analytics_index.xml
+++ b/view/adminhtml/layout/algolia_algoliasearch_analytics_index.xml
@@ -3,6 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <css src="Algolia_AlgoliaSearch::css/analytics.css"/>
+        <css src="Algolia_AlgoliaSearch::css/ui.css"/>
     </head>
     <body>
         <referenceContainer name="page.main.actions">
