Push structured data to Lambda

--- a/view/adminhtml/templates/support/contact.phtml
+++ b/view/adminhtml/templates/support/contact.phtml
@@ -68,9 +68,7 @@
                         id="message"
                         class="admin__control-textarea"
                         placeholder="Please provide us context of your problem or question: what you were trying to achieve, what went wrong, etc."
-                        data-validate="{required: true}">
-                        <?php echo $this->getRequest()->getParam('message'); ?>
-                    </textarea>
+                        data-validate="{required: true}"><?php echo $this->getRequest()->getParam('message'); ?></textarea>
 
                     <div class="admin__field-note">
                         <div class="note_icon">i</div>
