--- a/view/adminhtml/templates/analytics/overview.phtml
+++ b/view/adminhtml/templates/analytics/overview.phtml
@@ -9,7 +9,7 @@
             <div class="row thirds top-thirds">
                 <div class="one-third col-1">
                     <div class="title">
-                        <h4><?php echo __('Total Searches') ?>
+                        <h4><?php echo __('Total searches') ?>
                             <?php echo $this->getTooltipHtml(__('How many searches were performed. As-you-type searches are aggregated (the queries i, ip, ipa, ipad count as one search).')) ?>
                         </h4>
                     </div>
@@ -17,13 +17,13 @@
                 </div>
                 <div class="one-third col-2">
                     <h4><?php echo __('Users') ?>
-                        <?php echo $this->getTooltipHtml(__('How many users performed a search. If you implemented search from your backend, you need to forward the IP address of the user.')); ?>
+                        <?php echo $this->getTooltipHtml(__('How many unique users performed a search.')); ?>
                     </h4>
                     <div class="stat"><?php echo $this->getTotalUsersCount() ?></div>
                 </div>
                 <div class="one-third col-3">
                     <h4><?php echo __('No results rate') ?>
-                        <?php echo $this->getTooltipHtml(__('Percentage of searches that retrieved 0 results.')); ?>
+                        <?php echo $this->getTooltipHtml(__('Percentage of searches that retrieved 0 results. A lower percentage is better.')); ?>
                     </h4>
                     <div class="stat"><?php echo $this->getTotalResultRates() ?></div>
                 </div>
@@ -33,7 +33,7 @@
                 <div class="one-third col-1">
                     <div class="title">
                         <h4><?php echo __('CTR') ?>
-                            <?php echo $this->getTooltipHtml(__('Click-Through Rate: percentage of tracked searches (searches with clickAnalytics=true) where at least one result was clicked on by the user.')) ?>
+                            <?php echo $this->getTooltipHtml(__('Click-Through Rate: percentage of tracked searches (searches with clickAnalytics=true) where at least one results was clicked on by the user.')) ?>
                         </h4>
                     </div>
                     <?php $ctr = $this->getClickThroughRate() ?>
@@ -43,7 +43,7 @@
                 <div class="one-third col-2">
                     <div class="title">
                         <h4><?php echo __('Conversion rate') ?>
-                            <?php echo $this->getTooltipHtml(__('Percentage of tracked searches (searches with clickAnalytics=true) where you signaled to us that it led to a successful conversion. Settings to determine conversion can be found your <a href="%1">Magento Algolia Configuration</a> for Click Analytics.',
+                            <?php echo $this->getTooltipHtml(__('Percentage of tracked searches (searches with clickAnalytics=true) where you signaled to us that it led to a successful conversion. Settings to determine conversion can be found in your <a href="%1">Magento Algolia Configuration</a> for Click Analytics.',
                                 $this->getUrl('adminhtml/system_config/edit/section/algoliasearch_cc_analytics'))) ?>
                         </h4>
                     </div>
@@ -54,7 +54,7 @@
                 <div class="one-third col-3">
                     <div class="title">
                         <h4><?php echo __('Click position') ?>
-                            <?php echo $this->getTooltipHtml(__('Average position of clicks performed on the search results. A value of one would mean all users clicked on the first result. Smaller values are better.')) ?>
+                            <?php echo $this->getTooltipHtml(__('Average position of the clicks performed on the search results. A value of one would mean all users clicked on the first results. Smaller values are better.')) ?>
                         </h4>
                     </div>
                     <?php $click = $this->getClickPosition() ?>
@@ -75,7 +75,7 @@
             <div class="one-third section popular-searches">
                 <div class="title">
                     <h3><?php echo __('Popular searches') ?>
-                        <?php echo $this->getTooltipHtml(__('Searches performed the most often by your users.')) ?>
+                        <?php echo $this->getTooltipHtml(__('Searches performed the more often by your users.')) ?>
                     </h3>
                 </div>
                 <div class="analytics-content">
@@ -147,7 +147,7 @@
             <div class="one-third section no-result-searches">
                 <div class="title">
                     <h3><?php echo __('No result searches') ?>
-                        <?php echo $this->getTooltipHtml(__("Searches that retrieved 0 results, either because a word didn't match, or because some filters excluded all of the matching results.")); ?>
+                        <?php echo $this->getTooltipHtml(__("Searches that retrieved 0 results, either because a word didn't match, or because some filters excluded all of the matching results. <br/> <br/>A search with no results can often be optimized by improving keywords used in the dataset, or by adding synonyms.")); ?>
                     </h3>
                 </div>
                 <div class="analytics-content">
