--- a/view/adminhtml/templates/analytics/form.phtml
+++ b/view/adminhtml/templates/analytics/form.phtml
@@ -1,26 +1,31 @@
 <?php /** @var $this Algolia\AlgoliaSearch\Block\Adminhtml\Analytics\Form */ ?>
+<?php $isFormDisabled = !$this->isAnalyticsApiEnabled() ? ' disabled' : '' ?>
 <div class="algolia-analytics-form" id="algolia-analytics-daterange">
     <form id="algolia-analytics-form" data-mage-init='{"validation":{}}' action="<?php echo $this->getFormAction() ?>"  method="post">
         <input type="hidden" name="form_key" value="<?php echo $this->getFormKey() ?>" />
         <div class="inline-field">
-            <select name="type" class="select admin__control-select">
+            <select name="type" class="select admin__control-select"<?php echo $isFormDisabled ?>>
                 <?php foreach ($this->getSections() as $key => $section): ?>
-                    <option value="<?php echo $key ?>" <?php if ($key == $this->getFormValue('type')): ?>selected<?php endif ?>><?php echo ucwords($key) ?></option>
+                    <option value="<?php echo $key ?>" <?php if ($key == $this->getFormValue('type')): ?>selected<?php endif ?>>
+                        <?php echo ucwords($key) ?>
+                    </option>
                 <?php endforeach; ?>
             </select>
         </div>
         <div class="inline-field">
-            <input type="text" id="analytics_from" name="from"
+            <input type="text" id="analytics_from" name="from" <?php echo $isFormDisabled ?>
                    class="admin__control-text input-text date-range-analytics-from"
                    placeholder="<?php echo __('Start Date') ?>" value="<?php echo $this->getFormValue('from') ?>"/>
         </div>
         <span class="divide">-</span>
         <div class="inline-field">
-            <input type="text" id="analytics_to" name="to"
+            <input type="text" id="analytics_to" name="to" <?php echo $isFormDisabled ?>
                    class="admin__control-text input-text validate-date-range date-range-analytics-to"
                    placeholder="<?php echo __('End Date') ?>" value="<?php echo $this->getFormValue('to') ?>"/>
         </div>
-        <button type="submit" class="action submit primary algolia-daterange-submit"><?php echo __('Update') ?></button>
+        <button type="submit" class="action submit primary algolia-daterange-submit"<?php echo $isFormDisabled ?>>
+            <?php echo __('Update') ?>
+        </button>
     </form>
 </div>
 
